asm_tests/other_testfiles/invalid_files/error32.s
.name "MORO
hei
hello
moi
" #asdfghjkl
.comment "MORJESTA!"

sti r1, ,r2 r3
